--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,27 @@ ul {
   position: relative;
 }
 
+@media only screen and (min-width: 1200px) {
+  .content {
+    padding: 6rem 6rem 0 320px;
+  }
+}
+
 .header {
   align-items: center;
   background: black;
   color: white;
   display: flex;
+  flex-wrap: wrap;
   left: 0;
   padding: 1rem;
   top: 0;
   position: fixed;
-  transition: all 0.25s ease-in-out;
+  overflow: auto;
+  width: 100%;
+}
+.header__main {
+  display: flex;
   width: 100%;
 }
 .header__logo {
@@ -50,13 +61,20 @@ ul {
   margin-left: auto;
 }
 .header__navWrap {
-  color: #e5e5e5;
-  display: flex;
+  color: #c1c1c1;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
-  visibility: hidden;
+  padding: 6rem 1.9rem 0 1.5rem;
+  height: calc(100vh - 3rem);
   width: 100%;
+}
+.header__navWrap--open {
+  animation: slideDown 0.25s forwards ease-in-out;
+  display: flex;
+}
+.header__navWrap--closed {
+  animation: slideUp 0.25s forwards ease-in-out;
 }
 .header__nav {
   display: flex;
@@ -65,6 +83,7 @@ ul {
   margin-top: 3rem;
 }
 .header__nav__item {
+  transition: all 0.25s ease-in-out;
   position: relative;
   overflow: hidden;
   padding: 1rem 0;
@@ -83,7 +102,7 @@ ul {
   font-weight: 700;
 }
 .header__nav__item--icon {
-  background: #e5e5e5;
+  background: #c1c1c1;
   border-radius: 50%;
   color: black;
   display: flex;
@@ -91,18 +110,26 @@ ul {
   justify-content: center;
   padding: 0.5rem;
   min-width: 30px;
-  margin: 0 0.5rem;
+  max-width: 30px;
+  margin: 0 1rem 0 0;
 }
 .header__social {
   display: flex;
-  padding-bottom: 3rem;
+  justify-content: center;
+  padding: 3rem 0;
   width: 100%;
+}
+@media only screen and (min-width: 576px) {
+  .header__navWrap {
+    padding: 6rem 6rem 0 6rem;
+  }
 }
 @media only screen and (min-width: 1200px) {
   .header {
     align-items: start;
     flex-direction: column;
     height: 100%;
+    flex-wrap: nowrap;
     padding: 4rem 2rem 0 3rem;
     width: 300px;
   }
@@ -110,11 +137,25 @@ ul {
     display: none;
   }
   .header__navWrap {
+    display: flex;
+    padding: 0;
+    height: 100%;
     visibility: visible;
   }
-  .header__item--icon:hover {
+  .header__nav__item a:hover {
+    color: white;
+  }
+  .header__nav__item--icon:hover {
     background: black;
-    color: #e5e5e5;
+    box-shadow: 1px 1px 2px #c1c1c1;
+    color: #c1c1c1;
+  }
+  .header__nav__item--icon:hover i {
+    transform: scale(1.15);
+  }
+  .header__social {
+    justify-content: flex-start;
+    padding: 0 0 3rem 0;
   }
 }
 
