--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap')
 $navy: #14213d
 $yellow: #fca311
-$grey: #e5e5e5
-
+$grey: #c1c1c1
 a
 	color: inherit
 	cursor: pointer
@@ -16,22 +15,34 @@ ul
 	font-family: 'Montserrat', sans-serif
 	margin: 0
 	padding: 0
+
 	z-index: 2
 
 .blockWrapper
 	position: relative
+
+.content
+	&__header
+
+	@media only screen and (min-width: 1200px)
+		padding: 6rem 6rem 0 320px
 
 .header
 	align-items: center
 	background: black
 	color: white
 	display: flex
+	flex-wrap: wrap
 	left: 0
 	padding: 1rem
 	top: 0
 	position: fixed
-	transition: all .25s ease-in-out
+	overflow: auto
+	
 	width: 100%
+	&__main
+		display: flex
+		width: 100%
 	&__logo
 		font-size: 1.5rem
 		font-weight: 700
@@ -46,18 +57,25 @@ ul
 			margin-left: auto
 	&__navWrap
 		color: $grey
-		display: flex
+		display: none
 		flex-direction: column
 		justify-content: space-between
-		height: 100%
-		visibility: hidden
+		padding: 6rem 1.9rem 0 1.5rem
+		height: calc(100vh - 3rem)
 		width: 100%
+		&--open
+			animation: slideDown .25s forwards ease-in-out
+			display: flex
+		&--closed
+			animation: slideUp .25s forwards ease-in-out
+
 	&__nav
 		display: flex
 		flex-direction: column
 		justify-content: space-between
 		margin-top: 3rem
 		&__item
+			transition: all .25s ease-in-out
 			position: relative
 			overflow: hidden
 			padding: 1rem 0
@@ -80,26 +98,45 @@ ul
 				justify-content: center
 				padding: .5rem
 				min-width: 30px
-				margin: 0 .5rem
+				max-width: 30px
+				margin: 0 1rem 0 0
 	&__social
 		display: flex
-		padding-bottom: 3rem
+		justify-content: center
+		padding: 3rem 0
 		width: 100%
+	@media only screen and (min-width:576px)
+		&__navWrap
+			padding: 6rem 6rem 0 6rem
 	@media only screen and (min-width: 1200px)
 		align-items: start
 		flex-direction: column
 		height: 100%
+		flex-wrap: nowrap
 		padding: 4rem 2rem 0 3rem
 		width: 300px
 		&__icon
 			display: none
 		&__navWrap
-			visibility: visible 
-		&__item
-			&--icon
-				&:hover
-					background: black
-					color: $grey
+			display: flex
+			padding: 0
+			height: 100%
+			visibility: visible
+		&__nav 
+			&__item
+				a
+					&:hover
+						color: white
+				&--icon
+					&:hover
+						background: black
+						box-shadow: 1px 1px 2px $grey
+						color: $grey
+						i
+							transform: scale(1.15)
+		&__social
+			justify-content: flex-start
+			padding: 0 0 3rem 0
 
 .subMenu
 	display: none
@@ -107,7 +144,6 @@ ul
 	padding: 1.2rem 0 1.2rem 1rem
 	opacity: 0
 	width: 100%
-
 	li
 		padding: .5rem 0
 	&--open
@@ -115,7 +151,6 @@ ul
 		display: block
 	&--closed
 		animation: slideUp .25s forwards ease-in-out
-
 
 @keyframes slideDown
 	0%
