--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,13 +22,55 @@ ul
 	position: relative
 
 .content
+	background: $grey
+	min-height: 100vh
+	padding: 4rem 0 0 0 
 	&__header
-
+	&__masonWrap
+		width: 100%
+	@media only screen and (min-width: 576px)
+		padding: 4rem 6rem 0 6rem
 	@media only screen and (min-width: 1200px)
-		padding: 6rem 6rem 0 320px
+		padding: 4rem 6rem 0 320px
+	@media only screen and (min-width:1800px)
+		&__masonWrap
+			max-width: 80%
+	@media only screen and (min-width: 2200px)
+		&__masonWrap
+			max-width: 90%
+.search
+	position: fixed
+	right: 0
+	top: 0
+
+.mason
+	position: relative
+	width: auto
+	&__sizer, &__brick
+		width: 100%
+		@media only screen and (min-width: 800px)
+			width: 50%
+		@media only screen and (min-width: 1600px)
+			width: 33%
+		@media only screen and (min-width: 1800px)
+			width: 25%
+	&__sizer
+		@media only screen and (min-width:720px)
+			float: left
+	&__brick
+		padding: 1rem
+		position: absolute
+		top: 0
+		left: 0
+		&__thumb
+			img
+				height: auto
+				max-width: 100%
+		&__blurb
+			background: white
+
 
 .header
-	align-items: center
 	background: black
 	color: white
 	display: flex
@@ -38,9 +80,10 @@ ul
 	top: 0
 	position: fixed
 	overflow: auto
-	
 	width: 100%
+	z-index: 3
 	&__main
+		align-items: center
 		display: flex
 		width: 100%
 	&__logo
@@ -60,7 +103,7 @@ ul
 		display: none
 		flex-direction: column
 		justify-content: space-between
-		padding: 6rem 1.9rem 0 1.5rem
+		padding: 3rem 1.9rem 0 1.5rem
 		height: calc(100vh - 3rem)
 		width: 100%
 		&--open
@@ -68,7 +111,6 @@ ul
 			display: flex
 		&--closed
 			animation: slideUp .25s forwards ease-in-out
-
 	&__nav
 		display: flex
 		flex-direction: column
@@ -107,7 +149,7 @@ ul
 		width: 100%
 	@media only screen and (min-width:576px)
 		&__navWrap
-			padding: 6rem 6rem 0 6rem
+			padding: 3rem 6rem 0 6rem
 	@media only screen and (min-width: 1200px)
 		align-items: start
 		flex-direction: column
@@ -121,6 +163,7 @@ ul
 			display: flex
 			padding: 0
 			height: 100%
+			padding: 0
 			visibility: visible
 		&__nav 
 			&__item
