--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@ ul {
 
 * {
   box-sizing: border-box;
-  font-family: "Arimo", sans-serif;
   font-family: "Montserrat", sans-serif;
+  font-family: "Arimo", sans-serif;
   margin: 0;
   padding: 0;
+  transition: all 0.25s ease-in-out;
   z-index: 2;
 }
 
@@ -38,13 +39,11 @@ ul {
   .content {
     padding: 4rem 6rem 0 320px;
   }
-}
-@media only screen and (min-width: 1800px) {
   .content__masonWrap {
-    max-width: 80%;
+    max-width: 90%;
   }
 }
-@media only screen and (min-width: 2200px) {
+@media only screen and (min-width: 1800px) {
   .content__masonWrap {
     max-width: 90%;
   }
@@ -84,17 +83,40 @@ ul {
   }
 }
 .mason__brick {
-  padding: 1rem;
   position: absolute;
   top: 0;
   left: 0;
 }
-.mason__brick__thumb img {
+
+.entry {
+  padding: 1rem;
+}
+.entry__thumb {
+  background: white;
+  border-bottom: none;
+  width: 100%;
+}
+.entry__thumb img {
   height: auto;
   max-width: 100%;
 }
-.mason__brick__blurb {
+.entry__blurb {
   background: white;
+  border-top: none;
+  padding: 2rem;
+}
+.entry__blurb h2 {
+  font-weight: 400;
+}
+.entry__meta {
+  margin: 0.5rem 0 1rem 0;
+}
+.entry__meta a {
+  font-family: "Montserrat", sans-serif;
+  font-size: 0.8rem;
+}
+.entry__meta a:nth-last-of-type(2) {
+  margin-right: 1rem;
 }
 
 .header {
