--- a/sass/style.sass
+++ b/sass/style.sass
@@ -11,11 +11,11 @@ ul
 
 *
 	box-sizing: border-box
-	font-family: 'Arimo', sans-serif
 	font-family: 'Montserrat', sans-serif
+	font-family: 'Arimo', sans-serif
 	margin: 0
 	padding: 0
-
+	transition: all .25s ease-in-out
 	z-index: 2
 
 .blockWrapper
@@ -31,11 +31,10 @@ ul
 	@media only screen and (min-width: 576px)
 		padding: 4rem 6rem 0 6rem
 	@media only screen and (min-width: 1200px)
+		&__masonWrap
+			max-width: 90%
 		padding: 4rem 6rem 0 320px
 	@media only screen and (min-width:1800px)
-		&__masonWrap
-			max-width: 80%
-	@media only screen and (min-width: 2200px)
 		&__masonWrap
 			max-width: 90%
 .search
@@ -58,17 +57,33 @@ ul
 		@media only screen and (min-width:720px)
 			float: left
 	&__brick
-		padding: 1rem
 		position: absolute
 		top: 0
 		left: 0
-		&__thumb
-			img
-				height: auto
-				max-width: 100%
-		&__blurb
-			background: white
+.entry
+	padding: 1rem
+	&__thumb
+		background: white
 
+		border-bottom: none
+		width: 100%
+		img
+			height: auto
+			max-width: 100%
+	&__blurb
+		background: white
+
+		border-top: none
+		padding: 2rem
+		h2
+			font-weight: 400
+	&__meta
+		margin: .5rem 0 1rem 0 
+		a
+			font-family: 'Montserrat', sans-serif
+			font-size: 0.8rem
+			&:nth-last-of-type(2)
+				margin-right: 1rem
 
 .header
 	background: black
