--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 a {
   color: inherit;
   cursor: pointer;
+  text-decoration: none;
 }
 
 ul {
@@ -15,6 +16,8 @@ ul {
   margin: 0;
   padding: 0;
   transition: all 0.25s ease-in-out;
+  scroll-behavior: smooth;
+  -webkit-scroll-behavior: smooth;
   z-index: 2;
 }
 
@@ -28,6 +31,7 @@ ul {
   padding: 4rem 0 0 0;
 }
 .content__masonWrap {
+  padding: 0 2rem;
   width: 100%;
 }
 @media only screen and (min-width: 576px) {
@@ -40,19 +44,110 @@ ul {
     padding: 4rem 6rem 0 320px;
   }
   .content__masonWrap {
-    max-width: 90%;
-  }
-}
-@media only screen and (min-width: 1800px) {
-  .content__masonWrap {
-    max-width: 90%;
+    border-right: solid white 1px;
   }
 }
 
-.search {
-  position: fixed;
-  right: 0;
+.bigSearchButton {
+  background: #c1c1c1;
+  color: white;
+  display: none;
+  font-size: 1.5rem;
   top: 0;
+  right: 5.25rem;
+  padding-bottom: 8rem;
+  padding-top: 1rem;
+  position: fixed;
+  text-decoration: none;
+  text-orientation: mixed;
+  transform: rotate(180deg);
+  writing-mode: vertical-rl;
+}
+.bigSearchButton i {
+  padding: 1rem 0;
+  transform: rotate(180deg);
+}
+@media only screen and (min-width: 1200px) {
+  .bigSearchButton {
+    display: block;
+  }
+}
+
+.searchWindow {
+  align-items: center;
+  background: white;
+  display: none;
+  font-weight: 700;
+  flex-direction: column;
+  justify-content: center;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  opacity: 0;
+  width: 100vw;
+  z-index: 4;
+}
+.searchWindow__closeBtn {
+  font-size: 2rem;
+  position: absolute;
+  top: 1rem;
+  left: calc(50% - 1rem);
+}
+.searchWindow__input {
+  border: none;
+  border-bottom: solid 1px #c1c1c1;
+  color: black;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 2rem;
+}
+.searchWindow__input:focus {
+  outline: none;
+}
+.searchWindow span:nth-last-of-type(1) {
+  padding: 1rem 0;
+}
+@media only screen and (min-width: 576px) {
+  .searchWindow__input {
+    font-size: 3rem;
+  }
+}
+.searchWindow--open {
+  animation: menuSlideDown 0.25s forwards ease-in-out;
+  display: flex;
+}
+.searchWindow--closed {
+  animation: menuSlideUp 0.25s forwards ease-in-out;
+}
+
+.smoothScroll {
+  background: black;
+  bottom: -25%;
+  color: white;
+  display: block;
+  right: 0;
+  position: absolute;
+  padding: 1rem;
+  opacity: 0;
+}
+.smoothScroll--active {
+  animation: 0.25s slideUp ease-in-out forwards;
+  bottom: 0;
+  position: fixed;
+}
+.smoothScroll--inactive {
+  animation: 0.25s slideDown ease-in-out forwards;
+  position: fixed;
+}
+@media only screen and (min-width: 1200px) {
+  .smoothScroll {
+    bottom: 5%;
+    font-size: 2rem;
+    right: 4.25rem;
+  }
 }
 
 .mason {
@@ -88,7 +183,6 @@ ul {
 }
 .entry__thumb {
   background: white;
-  border-bottom: none;
   width: 100%;
 }
 .entry__thumb img {
@@ -97,7 +191,6 @@ ul {
 }
 .entry__blurb {
   background: white;
-  border-top: none;
   padding: 2rem;
 }
 .entry__blurb h2 {
@@ -158,11 +251,11 @@ ul {
   width: 100%;
 }
 .header__navWrap--open {
-  animation: slideDown 0.25s forwards ease-in-out;
+  animation: menuSlideDown 0.25s forwards ease-in-out;
   display: flex;
 }
 .header__navWrap--closed {
-  animation: slideUp 0.25s forwards ease-in-out;
+  animation: menuSlideUp 0.25s forwards ease-in-out;
 }
 .header__nav {
   display: flex;
@@ -225,6 +318,7 @@ ul {
     display: none;
   }
   .header__navWrap {
+    animation: none;
     display: flex;
     padding: 0;
     height: 100%;
@@ -259,14 +353,14 @@ ul {
   padding: 0.5rem 0;
 }
 .subMenu--open {
-  animation: slideDown 0.25s forwards ease-in-out;
+  animation: menuSlideDown 0.25s forwards ease-in-out;
   display: block;
 }
 .subMenu--closed {
-  animation: slideUp 0.25s forwards ease-in-out;
+  animation: menuSlideUp 0.25s forwards ease-in-out;
 }
 
-@keyframes slideDown {
+@keyframes menuSlideDown {
   0% {
     clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
     transform: translateY(-50%);
@@ -280,7 +374,7 @@ ul {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
   }
 }
-@keyframes slideUp {
+@keyframes menuSlideUp {
   0% {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     opacity: 1;
@@ -294,6 +388,25 @@ ul {
     clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
     opacity: 0;
     transform: translateY(-50%);
+  }
+}
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+@keyframes slideDown {
+  0% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(100%);
   }
 }
 
